Fix mobile responsive: reduce logo and text size to prevent overlap with GitHub button

--- a/index.html
+++ b/index.html
@@ -28,31 +28,14 @@
     <body class="bg-white text-gray-800">
         <!-- Navbar -->
         <nav class="bg-white shadow-md py-4 sticky top-0 z-50">
-            <div
-                class="container mx-auto px-4 md:px-6 flex justify-between items-center"
-            >
-                <div class="flex items-center gap-2 md:gap-3">
-                    <img
-                        src="logo.png"
-                        alt="Logo AccessPlus"
-                        class="w-8 h-8 md:w-10 md:h-10 object-contain"
-                    />
-                    <span class="text-xl md:text-2xl font-bold text-blue-600"
-                        >AccessPlus</span
-                    >
+            <div class="container mx-auto px-3 md:px-6 flex justify-between items-center">
+                <div class="flex items-center gap-1 md:gap-3">
+                    <img src="logo.png" alt="Logo AccessPlus" class="w-6 h-6 md:w-10 md:h-10 object-contain"/>
+                    <span class="text-lg md:text-2xl font-bold text-blue-600">AccessPlus</span>
                 </div>
-                <div class="flex items-center gap-2 md:gap-3">
-                    <a
-                        href="https://github.com/Fleau75/Projet-Final"
-                        target="_blank"
-                        class="bg-gray-200 text-gray-700 px-2 md:px-4 py-2 rounded text-sm md:text-base hover:bg-gray-300 transition-colors whitespace-nowrap"
-                        >Voir sur GitHub</a
-                    >
-                    <button
-                        class="bg-blue-600 text-white px-3 md:px-5 py-2 rounded-full opacity-60 cursor-not-allowed text-sm md:text-base whitespace-nowrap"
-                    >
-                        Bientôt disponible
-                    </button>
+                <div class="flex items-center gap-1 md:gap-3">
+                    <a href="https://github.com/Fleau75/Projet-Final" target="_blank" class="bg-gray-200 text-gray-700 px-2 md:px-4 py-1.5 md:py-2 rounded text-xs md:text-base hover:bg-gray-300 transition-colors whitespace-nowrap">Voir sur GitHub</a>
+                    <button class="bg-blue-600 text-white px-2 md:px-5 py-1.5 md:py-2 rounded-full opacity-60 cursor-not-allowed text-xs md:text-base whitespace-nowrap">Bientôt disponible</button>
                 </div>
             </div>
         </nav>
